tests/functional/lang/eval-fail/pipe-operators.err.exp
error: experimental Nix feature 'pipe-operators' is disabled; add '--extra-experimental-features pipe-operators' to enable it
       at /pwd/lang/eval-fail/pipe-operators.nix:1:3:
            1| 1 |> 2
             |   ^
            2|
